# excel-dupe

./: .gitignore  CMakeLists.txt  Info.plist  README.md
engine/: CMakeLists.txt
engine/include/: sc_cell.h  sc_engine.h  sc_hashmap.h  sc_selection.h  sc_sheet.h  sc_undo.h  sc_workbook.h
engine/src/: sc_cell.c  sc_engine.c  sc_hashmap.c  sc_selection.c  sc_sheet.c  sc_undo.c  sc_workbook.c
engine/tests/: CMakeLists.txt  test_cell.c  test_hashmap.c  test_selection.c  test_sheet.c  test_undo.c
python/: CMakeLists.txt
python/include/: sc_python_api.h  sc_python_bridge.h
python/src/: sc_python_api.c  sc_python_bridge.c
ui/: CMakeLists.txt  GLAppDelegate.h  GLAppDelegate.m  GLDocument.h  GLDocument.m  GLWindowController.h  GLWindowController.m
ui/Grid/: GLCellEditorView.h  GLCellEditorView.m  GLColumnHeaderView.h  GLColumnHeaderView.m  GLGridView.h  GLGridView.m  GLRowHeaderView.h  GLRowHeaderView.m
ui/Sidebar/: GLSheetTabBar.h  GLSheetTabBar.m
ui/Toolbar/: GLFormulaBarView.h  GLFormulaBarView.m
